--- a/ckan/public/base/less/bootstrap-variables.less
+++ b/ckan/public/base/less/bootstrap-variables.less
@@ -165,7 +165,7 @@
 @btn-warning-border:             darken(@btn-warning-bg, 5%);
 
 @btn-danger-color:               #fff;
-@btn-danger-bg:                  @brand-danger;
+@btn-danger-bg:                  darken(@brand-danger, 5%);
 @btn-danger-border:              darken(@btn-danger-bg, 5%);
 
 @btn-link-disabled-color:        @gray-light;
